--- a/package.json
+++ b/package.json
@@ -1,6 +1,29 @@
 {
-  "dependencies": {
-    "lucide-react": "^0.552.0",
-    "react-router-dom": "^7.9.5"
+  "name": "eco-himalayas-monorepo",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Eco Himalayas - Sustainable Tourism Platform",
+  "workspaces": [
+    "client",
+    "server"
+  ],
+  "scripts": {
+    "dev": "npm run dev --workspace=client",
+    "dev:client": "npm run dev --workspace=client",
+    "dev:server": "npm run dev --workspace=server",
+    "dev:all": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "build": "npm run build --workspaces",
+    "build:client": "npm run build --workspace=client",
+    "build:server": "npm run build --workspace=server",
+    "lint": "npm run lint --workspaces",
+    "clean": "npm run clean --workspaces && rm -rf node_modules",
+    "install:all": "npm install"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
